添加redis示例及测试代码

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,23 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!-- Spring Data Redis 的启动器-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.lettuce</groupId>
+					<artifactId>lettuce-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- 高版本的 spring-boot-data-redis 默认使用 Lettuce， 通过配置替换回来 -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
