--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=5
+spring.redis.jedis.pool.max-active=20
+
+spring.redis.host=27.221.114.23
+spring.redis.port=6379
+spring.redis.password=1qaz@WSX2w3e$R%T
+spring.redis.database=14
