--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# mysql 示例相关配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.235.101:3306/ssm
 spring.datasource.username=root
@@ -8,7 +9,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
+# redis 示例相关配置
 spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-active=20
@@ -17,3 +18,8 @@ spring.redis.host=27.221.114.23
 spring.redis.port=6379
 spring.redis.password=1qaz@WSX2w3e$R%T
 spring.redis.database=14
+
+# elasticsearch 示例相关配置
+spring.data.elasticsearch.cluster-name=ES20181227153235-demo-woka
+spring.data.elasticsearch.cluster-nodes=10.124.130.83:9300
+spring.data.elasticsearch.repositories.enabled=true
