添加mongo示例并开启凭证访问，加入测试用例

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.redis.database=14
 spring.data.elasticsearch.cluster-name=ES20181227153235-demo-woka
 spring.data.elasticsearch.cluster-nodes=10.124.130.83:9300
 spring.data.elasticsearch.repositories.enabled=true
+
+# mongodb  æ¿˝œ‡πÿ≈‰÷√
+spring.data.mongodb.uri=mongodb://business2:buspwd@192.168.235.105:27017/myNewDatabase
