添加对象存储示例及单元测试程序

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.data.elasticsearch.repositories.enabled=true
 
 # mongodb 示例相关配置
 spring.data.mongodb.uri=mongodb://business2:buspwd@192.168.235.105:27017/myNewDatabase
+
+# ceph 示例相关配置
+ceph.rgw.s3endpoint=10.124.133.179
+ceph.user.accesskey=7C0IM7649347OUAIEQHH
+ceph.user.secretkey=TiEvq1Ka9mDpHPEyh3YDGwds2ZVo9B0T11oCyMP1
