--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.data.mongodb.uri=mongodb://business2:buspwd@192.168.235.105:27017/myNewDa
 ceph.rgw.s3endpoint=10.124.133.179
 ceph.user.accesskey=7C0IM7649347OUAIEQHH
 ceph.user.secretkey=TiEvq1Ka9mDpHPEyh3YDGwds2ZVo9B0T11oCyMP1
+
+# kafka  æ¿˝œ‡πÿ≈‰÷√
+spring.kafka.bootstrap-servers=10.124.130.80:9092,10.124.130.81:9092,10.124.130.82:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=test
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
