处理为沃卡项目资源

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # mysql 示例相关配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.235.101:3306/ssm
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql:replication://10.124.133.183:3306,10.124.133.184:3306/voca_demo
+spring.datasource.username=MCloud
+spring.datasource.password=MCloud20181227131709
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
@@ -14,9 +14,9 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-active=20
 
-spring.redis.host=27.221.114.23
+spring.redis.host=10.124.210.151
 spring.redis.port=6379
-spring.redis.password=1qaz@WSX2w3e$R%T
+spring.redis.password=icloud20181227142352
 spring.redis.database=14
 
 # elasticsearch 示例相关配置
@@ -25,7 +25,7 @@ spring.data.elasticsearch.cluster-nodes=10.124.130.83:9300
 spring.data.elasticsearch.repositories.enabled=true
 
 # mongodb 示例相关配置
-spring.data.mongodb.uri=mongodb://business2:buspwd@192.168.235.105:27017/myNewDatabase
+spring.data.mongodb.uri=mongodb://business:buspwd@10.124.210.154:27017/myNewDatabase
 
 # ceph 示例相关配置
 ceph.rgw.s3endpoint=10.124.133.179
