--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 # mysql 示例相关配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql:replication://10.124.133.183:3306,10.124.133.184:3306/voca_demo
-spring.datasource.username=MCloud
-spring.datasource.password=MCloud20181227131709
+spring.datasource.url=jdbc:mysql:replication://192.168.235.101:3306,192.168.235.102:3306/voca_demo
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -14,26 +13,28 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-active=20
 
-spring.redis.host=10.124.210.151
+spring.redis.host=192.168.235.101
 spring.redis.port=6379
-spring.redis.password=icloud20181227142352
-spring.redis.database=14
+# spring.redis.password=icloud20181227142352
+spring.redis.database=2
 
 # elasticsearch 示例相关配置
-spring.data.elasticsearch.cluster-name=ES20181227153235-demo-woka
-spring.data.elasticsearch.cluster-nodes=10.124.130.83:9300
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=192.168.235.104:9300
 spring.data.elasticsearch.repositories.enabled=true
 
 # mongodb 示例相关配置
-spring.data.mongodb.uri=mongodb://business:buspwd@10.124.210.154:27017/myNewDatabase
+# spring.data.mongodb.uri=mongodb://myTester:123abc@192.168.235.138:27017/test?replicaSet=rs0&readPreference=secondary&authSource=test
+# spring.data.mongodb.uri=mongodb://myTester:123abc@192.168.235.138,192.168.235.139,192.168.235.140/test?replicaSet=rs0&readPreference=secondary&authSource=test
+spring.data.mongodb.uri=mongodb://myTester:123abc@192.168.235.108:27017,192.168.235.108:27018,192.168.235.108:27019/test?replicaSet=rs0&readPreference=secondary&authSource=test
 
 # ceph 示例相关配置
-ceph.rgw.s3endpoint=10.124.133.179
-ceph.user.accesskey=7C0IM7649347OUAIEQHH
-ceph.user.secretkey=TiEvq1Ka9mDpHPEyh3YDGwds2ZVo9B0T11oCyMP1
+ceph.rgw.s3endpoint=10.236.4.229
+ceph.user.accesskey=5DA0GLUOPPZ3BB5W0K99
+ceph.user.secretkey=PyYgZ7KQBNpgPxH9sJ4WcB3aQCCItgP9eQGsrQME
 
 # kafka 示例相关配置
-spring.kafka.bootstrap-servers=10.124.130.80:9092,10.124.130.81:9092,10.124.130.82:9092
+spring.kafka.bootstrap-servers=192.168.235.109:9092,192.168.235.110:9092,192.168.235.111:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id=test
